add counter
